# tree-sitter-sqlite

./: .hgignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  grammar.ts  package.json  pyproject.toml  setup.py  tree-sitter.json  tsconfig.json
bindings/c/: tree-sitter-sqlite.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_sqlite/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterSQLite/: sqlite.h
bindings/swift/TreeSitterSQLiteTests/: TreeSitterSQLiteTests.swift
grammar/: columns.js  columns.ts  expr.js  expr.ts  keywords.js  keywords.ts  literals.js  literals.ts  utils.js  utils.ts
types/: global.d.ts
