[package]
name = "tree-sitter-sqlite"
description = "SQLite grammar for tree-sitter"
version = "0.1.0"
authors = ["Merijn Verstraaten <merijn@inconsistent.nl>"]
license = "GPL 3.0"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "sqlite"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/merijn/tree-sitter-sqlite"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.3"
